[tool.poetry]
name = "archive-sanity-fork"
version = "0.0.1"
description = "Archiv for experimentation papers"
authors = ["Vinted"]

[tool.poetry.dependencies]
python = ">3.11.5,<3.12"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
statsmodels = "^0.14.0"
nb-clean = "^3.1.0"
feedparser = "^6.0.11"
flask = "^3.0.0"
scikit-learn = "^1.3.2"
sqlitedict = "^2.1.0"
sendgrid = "^6.11.0"
requests = "^2.31.0"
numpy = "^1.26.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ipython = "^8.18.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99
